--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="by.brust.cookbook.presentation.ui.LoginFragment"
+        android:name="by.brust.cookbook.presentation.ui.view.login.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
@@ -19,9 +19,9 @@
     </fragment>
     <fragment
         android:id="@+id/recipeFragment"
-        android:name="by.brust.cookbook.presentation.ui.RecipeFragment"
+        android:name="by.brust.cookbook.presentation.ui.view.recipelist.RecipeFragment"
         android:label="fragment_item_list"
-        tools:layout="@layout/fragment_item_list" >
+        tools:layout="@layout/fragment_recipes_list" >
         <action
             android:id="@+id/action_recipeFragment_to_detailRecipeFragment"
             app:destination="@id/detailRecipeFragment" />
@@ -33,11 +33,20 @@
         tools:layout="@layout/fragment_detail_recipe" />
     <fragment
         android:id="@+id/registrationFragment"
-        android:name="by.brust.cookbook.presentation.ui.RegistrationFragment"
+        android:name="by.brust.cookbook.presentation.ui.view.registration.RegistrationFragment"
         android:label="fragment_registration"
         tools:layout="@layout/fragment_registration" >
         <action
             android:id="@+id/action_registrationFragment_to_recipeFragment"
             app:destination="@id/recipeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="by.brust.cookbook.presentation.ui.view.profile.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_profileFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
 </navigation>
