--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout3"
+    android:background="@drawable/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RegistrationFragment">
@@ -12,6 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="160dp"
+        android:background="@color/white"
+        android:backgroundTint="@color/white"
         android:text="@string/registration_form"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +26,7 @@
         android:id="@+id/nameLabel"
         android:layout_width="0dp"
         android:layout_height="35dp"
+        android:background="@color/white"
         android:layout_marginStart="16dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="16dp"
@@ -36,6 +40,7 @@
     <EditText
         android:id="@+id/nameEditText"
         android:layout_width="200dp"
+        android:background="@color/white"
         android:layout_height="48dp"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="4dp"
@@ -52,6 +57,7 @@
         android:id="@+id/EmailLabel"
         android:layout_width="0dp"
         android:layout_height="35dp"
+        android:background="@color/white"
         android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
@@ -66,6 +72,7 @@
         android:id="@+id/emailEditText"
         android:layout_width="200dp"
         android:layout_height="48dp"
+        android:background="@color/white"
         android:layout_marginTop="24dp"
         android:autofillHints=""
         android:ems="10"
@@ -87,6 +94,7 @@
         android:id="@+id/passwordLabel"
         android:layout_width="0dp"
         android:layout_height="35dp"
+        android:background="@color/white"
         android:layout_marginStart="16dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
@@ -102,6 +110,7 @@
         android:id="@+id/passwordEditText"
         android:layout_width="200dp"
         android:layout_height="48dp"
+        android:background="@color/white"
         android:layout_marginTop="28dp"
         android:autofillHints=""
         android:ems="10"
@@ -116,6 +125,7 @@
         android:id="@+id/confirmPasswordLabel"
         android:layout_width="170dp"
         android:layout_height="53dp"
+        android:background="@color/white"
         android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
@@ -132,6 +142,7 @@
         android:layout_width="200dp"
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
+        android:background="@color/white"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
