--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/ic_menu_book"/>
 
     <item
-        android:id="@+id/favorite"
+        android:id="@+id/favoriteFragment"
         android:title="@string/favorite"
         android:enabled="true"
         android:icon="@drawable/ic_bookmark"/>
