--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -25,29 +25,30 @@
         android:id="@+id/nameLabel"
         android:layout_width="0dp"
         android:layout_height="35dp"
-        android:background="@color/white"
         android:layout_marginStart="16dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="16dp"
+        android:background="@color/white"
         android:gravity="center"
         android:text="@string/enter_your_name"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/nameEditText"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/RegistrationLabel" />
 
     <EditText
         android:id="@+id/nameEditText"
         android:layout_width="200dp"
-        android:background="@color/white"
         android:layout_height="48dp"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="4dp"
         android:autofillHints=""
+        android:background="@color/white"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/name"
-        android:textSize="14sp"
+        android:gravity="clip_vertical|center_vertical"
+        android:inputType="text"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toBottomOf="@+id/RegistrationLabel" />
